Added a real HTML homepage with a Javascript test

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  home works!
-</p>
+<!-- Resources -->
+<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet">
+
+<div class="root">
+  <h2>You're ready to go!</h2>
+  <div class="card" (click)="onCardClick()">
+    <img class="ng-logo" src="/assets/graphics/svg/ng-logo.svg">
+  </div>
+  <div class="spacer"></div>
+</div>
